--- a/src/main/resources/templates/studentAdd.html
+++ b/src/main/resources/templates/studentAdd.html
@@ -3,8 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="bootstrap-5.1.3-dist\css\bootstrap.min.css"  rel="stylesheet">
+    <script src="bootstrap-5.1.3-dist\js\jquery-3.3.1.min.js"></script>
+    <script src="bootstrap-5.1.3-dist\js\bootstrap.bundle.js"></script>
 </head>
 <body>
 <h1>studentAdd</h1>
+
+<div class="container mt-3">
+
+    <form action="/student/add" method="post">
+        <div class="mb-3 mt-3">
+            <label for="email" class="form-label">Username:</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter email" name="username">
+        </div>
+        <div class="mb-3">
+            <label for="pwd" class="form-label">Password:</label>
+            <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="password">
+        </div>
+        <button type="submit" class="btn btn-primary">添加学生</button>
+    </form>
+</div>
 </body>
 </html>
