--- a/src/main/resources/templates/studentAdd.html
+++ b/src/main/resources/templates/studentAdd.html
@@ -14,7 +14,7 @@
 
     <form action="/student/findAll" method="post">
         <div class="mb-3 mt-3">
-            <label for="email" class="form-label">Username:</label>
+            <label  class="form-label">Username:</label>
             <input type="text" class="form-control"  placeholder="Enter username" name="username">
         </div>
         <div class="mb-3">
